# crop-health-api

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: continous-integration.yaml  main-release.yml
crop_health_api/: __main__.py  custom_openapi.py
crop_health_api/example_code/curl/: predictions__binary.sh  predictions__multi-HLT.sh  predictions__single-HLT.sh
crop_health_api/example_code/javascript/: predictions__binary.js  predictions__multi-HLT.js  predictions__single-HLT.js
crop_health_api/example_code/python/: predictions__binary.py  predictions__multi-HLT.py  predictions__single-HLT.py
deployment/argocd/: app.yaml
deployment/kubernetes/: crop-health-api.yaml
torch_serve/docker/: Dockerfile  config.properties
